[tool.poetry]
name = "homework5"
version = "0.1.0"
description = ""
authors = ["Jymbarbaruoky <116517553+Jymbarbaruoky@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
websockets = "^10.4"
names = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
